--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
             <version>0.13.0</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.5.0-jre</version>
+        </dependency>
 	</dependencies>
 
 	<build>
