--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,1 @@
-spring.application.name=veebipood
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/shop
-spring.datasource.username=postgres
-spring.datasource.password=123
-
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.cache.type=redis
-
-#spring.mail.host=sandbox.smtp.mailtrap.io
-#spring.mail.port=2525
-#spring.mail.username=db172393b042ad
-#spring.mail.password=1400314b118508
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-
-spring.mail.host=live.smtp.mailtrap.io
-spring.mail.port=587
-spring.mail.username=api
-spring.mail.password=ced970d71189f895189fea8d54152fed
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-
-logging.file.name=logs.log
+spring.profiles.active=dev
