--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-#VITE_BACKEND_URL=http://localhost:8080
-VITE_BACKEND_URL=https://spring-backend-kwlm.onrender.com
+VITE_BACKEND_URL=http://localhost:8080
+#VITE_BACKEND_URL=https://spring-backend-kwlm.onrender.com
