--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -27,3 +27,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 logging.file.name=logs.log
+
+frontend.url=https://veebipoood.web.app
